# forecaster

./: .gitignore  README.md  copy_of_preparing_a_tensorflow_model_for_a_mobile_device_with_tensorflow_lite.py  fashion_mobile_model.h5  gmaps.html  humberto.java  imagesnipper.py  imagesnipperalone.py  notes.txt  pyproject.toml  requirements.txt  uw_test.py
analysis/: predicted_drive_times.md  steventime.csv  steventime.ipynb  steventime_attempt1.ipynb
docker/: Dockerfile  main.py  pyvenv.cfg  requirements.txt
gcs-docker-forecaster/: Dockerfile  main.py  p2p-forecaster-0fd319c9ee7a.json  requirements.txt
notebooks/: mapgrabber.ipynb
