[tool.poetry]
name = "forecaster"
version = "0.1.0"
description = ""
authors = ["Matt Paulin <matt@ministryofproduct.com>"]
license = "Unlicensed"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"
pandas = "^2.0.0"
boto3 = "^1.34.1"
pyyaml = "^6.0.1"
matplotlib = "^3.8.2"
geopandas = "^0.14.1"
ipykernel = "^6.27.1"
csvkit = "^1.3.0"
jupysql = "^0.10.7"
plotly = "^5.18.0"
duckdb = "0.9.2"
sqlalchemy = "~2.0.0"
fuzzywuzzy = "^0.18.0"
nbformat = "^5.9.2"
imageio = "^2.33.1"
seaborn = "^0.13.2"
folium = "^0.15.1"
googlemaps = "^4.10.0"
google-api-python-client = "^2.122.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
psycopg2-binary = "^2.9.9"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
